works but satish are doing this
works but satish are doing this
ithng create a new project for view data

--- a/TaskManagementAPI/TaskManagementAPI.csproj
+++ b/TaskManagementAPI/TaskManagementAPI.csproj
@@ -25,4 +25,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Home\" />
+    <Folder Include="wwwroot\css\" />
+    <Folder Include="wwwroot\lib\" />
+  </ItemGroup>
+
 </Project>
